--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <div class="main-container">
       <h1> DevMountain Chat Room </h1>
       <form ng-submit="postMessage(message)">
-        <input class="form-control text-box" type="text" ng-model="message" placeholder="Message">
+        <input class="form-control text-box" type="text" ng-model="message" placeholder="Type your Message here">
       </form>
       <div class="messages-container">
-        <p ng-repeat="message in messages ">
+        <p ng-repeat="message in receivedMessages ">
           {{message.message}} </p>
       </div>
     </div>
